--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <!-- bootstrap cdn link -->
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/css/bootstrap.min.css">
     <!-- custom css link -->
-          <link rel="stylesheet" href="/style.css">
+          <link rel="stylesheet" href="style.css">
 </head>
 
 
