--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <!-- bootstrap cdn link -->
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/4.6.1/css/bootstrap.min.css">
     <!-- custom css link -->
-          <link rel="stylesheet" href="style.css">
+          <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 
@@ -309,7 +309,7 @@
 
 
 <!-- Custom js link -->
-<script src="/script.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
